# arcaflow-plugin-sdk-python

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.schema.json  example.yaml  example_plugin.py  generate.sh  oneof_int_plugin.py  pyproject.toml  requirements.txt  test_example_plugin.py
.github/workflows/: build.yml
docs/: arcaflow_plugin_sdk.annotations.rst  arcaflow_plugin_sdk.http.rst  arcaflow_plugin_sdk.jsonschema.rst  arcaflow_plugin_sdk.plugin.rst  arcaflow_plugin_sdk.rst  arcaflow_plugin_sdk.schema.rst  arcaflow_plugin_sdk.serialization.rst  arcaflow_plugin_sdk.test_jsonschema.rst  arcaflow_plugin_sdk.test_plugin.rst  arcaflow_plugin_sdk.test_schema.rst  arcaflow_plugin_sdk.validation.rst  conf.py  index.rst  make.bat  modules.rst
proto/: arcaflow-plugin.proto
src/arcaflow_plugin_sdk/: __init__.py  _http.py  _openapi.py  annotations.py  arcaflow_plugin_pb2.py  atp.py  http.py  jsonschema.py  plugin.py  predefined_schemas.py  schema.py  serialization.py  stdioapi.py  test_atp.py  test_jsonschema.py  test_plugin.py  test_schema.py  validation.py
